--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -39,7 +39,7 @@
     <string name="share_lyrics">Share lyrics</string>
     <string name="share_as_text">Share as text</string>
     <string name="share_as_image">Share as image</string>
-    <string name="max_selection_limit">Share as image</string>
+    <string name="max_selection_limit">Max selection limit</string>
     <string name="share_selected">Share selected</string>
     <string name="customize_colors">Customize colors</string>
     <string name="more_options">More options</string>
