--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -129,8 +129,8 @@
     <string name="percentage_format">%d%%</string>
     <string name="minimum_playback_duration">Minimum playback duration</string>
 
-    <string name="import_online">Import a playlist (m3u) (autosearch)</string>
-    <string name="import_csv">Import a playlist (csv) (autosearch)</string>
+    <string name="import_online">Import a \"m3u\" playlists</string>
+    <string name="import_csv">Import a \"csv\" playlists</string>
     <string name="playlist_add_local_to_synced_note">Note: Adding local songs to synced/remote playlists is unsupported. Any other combination is valid</string>
 
     <string name="auto_download_on_like">Auto download on like</string>
