--- a/app/src/main/res/values-ar/metrolist_strings.xml
+++ b/app/src/main/res/values-ar/metrolist_strings.xml
@@ -151,6 +151,7 @@
     <string name="import_online">استيراد قوائم التشغيل من نوع \"m3u\"</string>
     <string name="lyrics_romanize_japanese">كلمات الأغاني اليابانية الرومانية</string>
     <string name="lyrics_romanize_korean">كلمات الأغاني الكورية الرومانية</string>
+    <string name="lyrics_translate_ai">ترجمة كلمات الأغاني بالذكاء الاصطناعي</string>
     <string name="yt_sync">المزامنة التلقائية مع الحساب</string>
     <string name="more_content">المزيد من المحتوي</string>
     <string name="new_player_design">تصميم المشغل الجديد</string>
