Fix queue persistence issue when notification is dismissed
- Remove stopSelf() from onTaskRemoved() to prevent service termination
- Add ServiceKeepAliveKey preference for keeping service alive
- Add onUpdateNotification mechanism to control service lifecycle
- Add service keep alive setting in PlayerSettings
- Add corresponding strings in metrolist_strings.xml

This ensures the queue is preserved even when the media control notification is swiped away and the app is closed/reopened.

--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -53,6 +53,8 @@
     <string name="sort_by_last_updated">Date updated</string>
     <string name="link_copied">Link copied to clipboard</string>
     <string name="starting_radio">Starting radio</string>
+    <string name="service_keep_alive">Service keep alive</string>
+    <string name="service_keep_alive_desc">Keep the music service running even when not playing to preserve queue state</string>
     <string name="now_playing">Now Playing</string>
 
     <string name="lyrics">Lyrics</string>
