--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -192,6 +192,8 @@
     <!-- Player Settings -->
     <string name="disable_load_more_when_repeat_all">Disable load more when repeat all</string>
     <string name="disable_load_more_when_repeat_all_desc">Don\'t auto load more songs and similar content when repeat all mode is enabled</string>
+
+    <!-- Romanization Settings -->
     <string name="lyrics_romanization_cyrillic">Cyrillic</string>
     <string name="lyrics_romanize_title">Romanization</string>
     <string name="lyrics_romanization">Lyrics romanization</string>
@@ -199,6 +201,10 @@
     <string name="lyrics_romanize_belarusian">Romanize belarusian lyrics</string>
     <string name="lyrics_romanize_kyrgyz">Romanize kyrgyz lyrics</string>
     <string name="lyrics_romanize_serbian">Romanize serbian lyrics</string>
+    <string name="line_by_line_dialog_title">Are you sure you want to do this?</string>
+    <string name="line_by_line_dialog_desc">This is a hit or miss experimental feature. By default, language is determined from the whole song, but with this option on, it will be determined line by line instead. This will allow multi-language songs to work BUT the language might not always be correct (for example if there is a Ukrainian lyric that doesn\'t contain any Ukrainian-specific letters, it might be romanized as Russian instead). If you do not have issues, it is recommended to keep this option off.</string>
+    <string name="line_by_line_dialog_enable">Enable</string>
+    <string name="line_by_line_dialog_cancel">Cancel</string>
 
     <!-- Material 3 Settings Sections -->
     <string name="settings_section_ui">User Interface</string>
