--- a/app/src/main/res/values-ja/metrolist_strings.xml
+++ b/app/src/main/res/values-ja/metrolist_strings.xml
@@ -51,6 +51,7 @@
     <string name="already_in_playlist">再生リストに追加済みです:</string>
     <string name="login_settings">ログイン設定</string>
     <string name="general_settings">一般設定</string>
+    <string name="swipe_song_to_remove">曲をスワイプしてプレイリストから削除します</string>
     <string name="lyrics_click_change">タップで歌詞を変更</string>
     <string name="slim">スリム</string>
     <string name="similar_content">似ているコンテンツ</string>
