--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -13,8 +13,9 @@
     <string name="loading_charts">Loading charts…</string>
     <string name="retry_button">Retry</string>
     <string name="album_cover_desc">Album cover</string>
-    <string name="top_music_videos">Top music videos</string>
     <string name="trending">Trending</string>
+    <string name="featured_artists">Featured Artists</string>
+    <string name="featured_albums">Featured Albums</string>
 
     <string name="weeks">Weeks</string>
     <string name="months">Months</string>
@@ -82,8 +83,6 @@
     <string name="seek_seconds_addup">Progressive seek</string>
     <string name="seek_seconds_addup_description">If enabled,  Adds up 5 extra seconds incrementally on each seek skip</string>
 
-    <string name="similar_content">Similar content</string>
-
     <string name="login_settings">Login settings</string>
     <string name="general_settings">General settings</string>
 
@@ -149,8 +148,6 @@
     <string name="discord_use_details_description">Show song title prominently instead of artist names</string>
 
     <string name="audio_quality_max">Max (beta)</string>
-    <string name="enable_similar_content">Enable similar content</string>
-    <string name="similar_content_desc">Automatically add more similar songs when the end of the queue is reached</string>
     <string name="min_playback_duration_title">Minimum playback duration</string>
     <string name="min_playback_duration_description">The minimum amount of a song that must be played before it is considered \"played\"</string>
     <string name="percentage_format">%d%%</string>
@@ -208,7 +205,7 @@
 
     <!-- Player Settings -->
     <string name="disable_load_more_when_repeat_all">Disable load more when repeat all</string>
-    <string name="disable_load_more_when_repeat_all_desc">Don\'t auto load more songs and similar content when repeat all mode is enabled</string>
+    <string name="disable_load_more_when_repeat_all_desc">Don\'t auto load more songs when repeat all mode is enabled</string>
 
     <!-- Romanization Settings -->
     <string name="lyrics_romanization_cyrillic">Cyrillic</string>
