--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -48,6 +48,15 @@
     <string name="added_to_play_next">Added to play next</string>
     <string name="added_to_queue">Added to the queue</string>
     <string name="remove_from_cache">Remove from cache</string>
+    
+    <!-- Menu descriptions -->
+    <string name="start_radio_desc">Play similar songs based on this playlist</string>
+    <string name="play_next_desc">Add to the front of the queue</string>
+    <string name="add_to_queue_desc">Add to the end of the queue</string>
+    <string name="download_playlist_desc">Download all songs for offline playback</string>
+    <string name="share_playlist_desc">Share this playlist with others</string>
+    <string name="delete_playlist_desc">Remove this playlist permanently</string>
+    <string name="sync_playlist_desc">Sync playlist with YouTube Music</string>
     <string name="copy_link">Copy link</string>
     <string name="select">Select all</string>
     <string name="like_all">Like all</string>
