Improve playlist UI: larger play button and dynamic download menu
- Increased play button size from 72dp to 80dp and icon from 40dp to 48dp across all playlist screens
- Updated download menu item to show different states:
  - 'Download' with download icon when not downloaded
  - 'Downloading' with progress indicator when in progress
  - 'Remove download' with offline icon when completed
- Added missing string resources for download descriptions in metrolist_strings.xml

--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -51,6 +51,8 @@
     
     <!-- Menu descriptions -->
     <string name="download_playlist_desc">Download all songs for offline playback</string>
+    <string name="remove_download_playlist_desc">Remove all downloaded songs from this playlist</string>
+    <string name="download_in_progress_desc">Download is in progress</string>
     <string name="share_playlist_desc">Share this playlist with others</string>
     <string name="delete_playlist_desc">Remove this playlist permanently</string>
     <string name="sync_playlist_desc">Sync playlist with YouTube Music</string>
